--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 position:absolute;
 	left:50%;
 	top:50%;
-	transform: translate(-50%, -50%) scale(3);
+	transform: translate(-50%, -50%);
 	transform-origin: 50% 50%;
 	text-align:center;
 	overflow:visible;
